Clippy modal width fix
- The Clippy modal is now wider on screens with a width of 1000 to 1345 pixels

--- a/css/main.css
+++ b/css/main.css
@@ -730,13 +730,7 @@ hr {
     margin-top: 200px;
     position: fixed;
     scroll-behavior: smooth;
-    width: 30%;
-  }
-}
-
-@media (width >= 1000px) {
-  #clippy {
-    width: 20%;
+    width: 40%;
   }
 }
 
